Card title images no longer have negative margin i.e. don't overlap now. it looks better.

--- a/css/main.less
+++ b/css/main.less
@@ -713,9 +713,7 @@ podding - stylesheet for generic objects (lol)
     }
 
     .description {
-      @media (max-width: @break2) {
         margin-top: @line;
-      }
     }
 
   }
