--- a/css/objects.less
+++ b/css/objects.less
@@ -93,7 +93,6 @@
     
     @media all and (max-width: @break2)   {
       width: 100%;
-      margin-bottom: -33%;    
     }
 
     @media (min-width: @break2) {
